# pylinearfold

./: .gitmodules  CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
app/: CMakeLists.txt  pylinearfold_app.cpp
include/pylinearfold/: pylinearfold.hpp
pylinearfold/: __init__.py  _pylinearfold.cpp  _pylinearpartition.cpp
python/pylinearfold/: __init__.py  _pylinearfold.cpp
src/: CMakeLists.txt  pylinearfold.cpp
tests/: CMakeLists.txt  pylinearfold_t.cpp  test_pylinearfold.py
